# bootstrap

./: .gitignore  pyproject.toml  readme.md
19_1/: app.py  index.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py  0003_contact_remove_product_manufactured_at_and_more.py  0004_alter_contact_last_name.py  0005_article_alter_product_created_at_and_more.py  0006_rename_published_article_is_published.py  0007_alter_article_views_qty.py  0008_alter_article_is_published_alter_article_slug_and_more.py  0009_alter_product_photo.py  0010_version.py  0011_product_owner.py  0012_alter_product_options_product_is_published.py  0013_alter_product_is_published.py  0014_alter_product_options.py
catalog/templates/: contacts.html
catalog/templates/catalog/: 404.html  article_confirm_delete.html  article_detail.html  article_form.html  article_list.html  base.html  category_list.html  contact_list.html  contacts.html  home.html  inc_contact_us.html  inc_main_menu.html  product.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templatetags/: catalog_tags.py
config/: settings.py  urls.py
fixtures/: auth_data.json  catalog_data.json  users_data.json
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/users/: login.html  password_reset.html  user_form.html
